GearsetPOC/force-app/main/default/objects/Fault_Logging__c/Fault_Logging__c.object-meta.xml
<CustomObject>
    <description>ECC Form</description>
    <label>Fault Log</label>
    <nameField>
        <displayFormat>FL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fault Logging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>