GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Platform__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>4.7.5</fullName>
            </value>
            <value>
                <fullName>4.7.2</fullName>
            </value>
            <value>
                <fullName>4.6.2</fullName>
            </value>
            <value>
                <fullName>4.6.0</fullName>
            </value>
            <value>
                <fullName>4.5.2</fullName>
            </value>
            <value>
                <fullName>4.5.1</fullName>
            </value>
            <value>
                <fullName>4.3.0</fullName>
            </value>
            <value>
                <fullName>4.0.1</fullName>
            </value>
            <value>
                <fullName>4.0.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>