GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <label>Bug # (If Known)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>