GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fault Logging</relationshipLabel>
    <relationshipName>Fault_Logging</relationshipName>
    <type>Lookup</type>
</CustomField>