GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Current_Issue__c.field-meta.xml
<CustomField>
    <fullName>Current_Issue__c</fullName>
    <label>Current Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>