GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Customer_Already_Has_A_Booking__c.field-meta.xml
<CustomField>
    <fullName>Customer_Already_Has_A_Booking__c</fullName>
    <label>Customer Already Has A Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>