GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Date_Time_of_Error__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Error__c</fullName>
    <label>Date/Time of Error</label>
    <type>DateTime</type>
</CustomField>