GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <formula>Ticket_Number__r.Departure_Date_Time_Format__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>