GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Platform__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Nokia</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>HTC</fullName>
            </value>
            <value>
                <fullName>Motorola</fullName>
            </value>
            <value>
                <fullName>Huawei</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Oppo</fullName>
            </value>
            <value>
                <fullName>OnePlus</fullName>
            </value>
            <value>
                <fullName>Meizu</fullName>
            </value>
            <value>
                <fullName>Blackberry</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>