GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Device_Version__c.field-meta.xml
<CustomField>
    <fullName>Device_Version__c</fullName>
    <label>Device Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Device__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>215</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>222</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>515</fullName>
            </value>
            <value>
                <fullName>808</fullName>
            </value>
            <value>
                <fullName>10 Series</fullName>
            </value>
            <value>
                <fullName>4G LTE Series</fullName>
            </value>
            <value>
                <fullName>858 Smart</fullName>
            </value>
            <value>
                <fullName>9720 Series</fullName>
            </value>
            <value>
                <fullName>A Series</fullName>
            </value>
            <value>
                <fullName>Ascend Series</fullName>
            </value>
            <value>
                <fullName>Asha Series</fullName>
            </value>
            <value>
                <fullName>ATRIX Series</fullName>
            </value>
            <value>
                <fullName>Bello</fullName>
            </value>
            <value>
                <fullName>Bold Touch Series</fullName>
            </value>
            <value>
                <fullName>C Series</fullName>
            </value>
            <value>
                <fullName>Classic Series</fullName>
            </value>
            <value>
                <fullName>Curve Series</fullName>
            </value>
            <value>
                <fullName>Desire 5 Series</fullName>
            </value>
            <value>
                <fullName>Desire 6 Series</fullName>
            </value>
            <value>
                <fullName>Desire 7 Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>