GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Enhancement_For__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_For__c</fullName>
    <label>Enhancement For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dotcom</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Mobile Site</fullName>
            </value>
            <value>
                <fullName>Opera/Elgar</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>