GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Fault_Reference__c.field-meta.xml
<CustomField>
    <fullName>Fault_Reference__c</fullName>
    <label>Fault Reference (If Known)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>