GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/FBC__c.field-meta.xml
<CustomField>
    <fullName>FBC__c</fullName>
    <formula>Ticket_Number__r.FBC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FBC</label>
    <type>Text</type>
</CustomField>