GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <formula>Ticket_Number__r.Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From</label>
    <type>Text</type>
</CustomField>