GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/How_Many__c.field-meta.xml
<CustomField>
    <fullName>How_Many__c</fullName>
    <label>How Many</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Other_Users_Affected__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 25</fullName>
            </value>
            <value>
                <fullName>25 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 500</fullName>
            </value>
            <value>
                <fullName>500+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>