GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/How_Would_This_Impact_ECC__c.field-meta.xml
<CustomField>
    <fullName>How_Would_This_Impact_ECC__c</fullName>
    <label>How Would This Impact ECC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>