GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Mobile_Browser__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Browser__c</fullName>
    <label>Mobile Browser</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Platform__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device Default Browser</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Google Chrome</fullName>
            </value>
            <value>
                <fullName>Mozilla Firefox</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>