GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/New_or_Existing_Error__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Error__c</fullName>
    <label>New or Existing Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Error</fullName>
            </value>
            <value>
                <fullName>Existing Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>