GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain__c</fullName>
    <label>Please Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>