GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>