GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Results_Expected__c.field-meta.xml
<CustomField>
    <fullName>Results_Expected__c</fullName>
    <label>Results Expected</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>