GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Results_Received__c.field-meta.xml
<CustomField>
    <fullName>Results_Received__c</fullName>
    <label>Results Received</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>