GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Steps_Taken_to_Generate__c.field-meta.xml
<CustomField>
    <fullName>Steps_Taken_to_Generate__c</fullName>
    <label>Steps Taken to Generate Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>