GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>Ticket_Number__r.Destination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To</label>
    <type>Text</type>
</CustomField>