GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Vendor_Locator__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Locator__c</fullName>
    <label>Vendor Locator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>