GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Website_Language__c.field-meta.xml
<CustomField>
    <fullName>Website_Language__c</fullName>
    <label>Website Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK-EN</fullName>
            </value>
            <value>
                <fullName>BE-EN</fullName>
            </value>
            <value>
                <fullName>US-EN</fullName>
            </value>
            <value>
                <fullName>FR-FR</fullName>
            </value>
            <value>
                <fullName>BE-FR</fullName>
            </value>
            <value>
                <fullName>BE-NL</fullName>
            </value>
            <value>
                <fullName>NL-NL</fullName>
            </value>
            <value>
                <fullName>RW-EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>