GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/What_You_Would_Like_To_See__c.field-meta.xml
<CustomField>
    <fullName>What_You_Would_Like_To_See__c</fullName>
    <label>What You Would Like To See</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>