GearsetPOC/force-app/main/default/objects/Fault_Logging__c/fields/Which_GDS_System__c.field-meta.xml
<CustomField>
    <fullName>Which_GDS_System__c</fullName>
    <label>Which GDS System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>