GearsetPOC/force-app/main/default/objects/Fault_Logging__c/recordTypes/Dotcom_Error.recordType-meta.xml
<RecordType>
    <fullName>Dotcom_Error</fullName>
    <active>true</active>
    <description>Used for logging any issues resulting from a Dotcom error</description>
    <label>Dotcom Error</label>
</RecordType>