GearsetPOC/force-app/main/default/objects/Fault_Logging__c/recordTypes/Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Enhancement</fullName>
    <active>true</active>
    <label>Enhancement</label>
</RecordType>