GearsetPOC/force-app/main/default/objects/Fault_Logging__c/recordTypes/GDS_Error.recordType-meta.xml
<RecordType>
    <fullName>GDS_Error</fullName>
    <active>true</active>
    <description>Used for logging any issues resulting from a GDS error</description>
    <label>GDS Error</label>
</RecordType>