GearsetPOC/force-app/main/default/objects/Fault_Logging__c/recordTypes/Mobile_Error.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Error</fullName>
    <active>true</active>
    <description>Used for logging any issues resulting from a Mobile Site or App error</description>
    <label>Mobile Error</label>
</RecordType>