GearsetPOC/force-app/main/default/objects/Fault_Logging__c/recordTypes/Opera_Elgar_Error.recordType-meta.xml
<RecordType>
    <fullName>Opera_Elgar_Error</fullName>
    <active>true</active>
    <description>Used for logging any issues resulting from an Opera or Elgar error</description>
    <label>Opera / Elgar Error</label>
</RecordType>