GearsetPOC/force-app/main/default/objects/Fault_Logging__c/validationRules/GDS_Mandatory_Fault_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>GDS_Mandatory_Fault_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &quot;GDS Error&quot;
&amp;&amp;
ISPICKVAL( New_or_Existing_Error__c , &quot;Existing Error&quot;)
&amp;&amp;
ISBLANK( Fault_Reference__c )</errorConditionFormula>
    <errorMessage>Please enter the Fault Reference for the existing error</errorMessage>
</ValidationRule>