GearsetPOC/force-app/main/default/objects/Fault_Logging__c/listViews/Mobile_Error.listView-meta.xml
<ListView>
    <fullName>Mobile_Error</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Message__c</columns>
    <columns>Bug__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fault_Logging__c.Mobile_Error</value>
    </filters>
    <label>Mobile Error</label>
    <language>en_US</language>
</ListView>